spacing and margin fixes profile component

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -100,7 +100,7 @@
 }
 
 .project-introduction>h5 {
-  margin-top: 5px;
+  margin-top: 35px;
   margin-bottom: 35px;
 }
 
